--- a/Admin/app/src/main/res/layout/content_main.xml
+++ b/Admin/app/src/main/res/layout/content_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="100sp"
         android:background="@color/colorPrimary"
         android:gravity="center"
-        android:text="Butuh Juru Las"
+        android:text="JuruLas.com"
         android:textColor="@android:color/white"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/button14"
@@ -26,7 +26,7 @@
         android:id="@+id/button14"
         android:layout_width="200sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/button"
         android:text="Welder"
         android:textColor="@android:color/white"
@@ -38,9 +38,21 @@
         android:id="@+id/button15"
         android:layout_width="200sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="200dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/button"
         android:text="Proyek Konstruksi"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="200sp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="100dp"
+        android:background="@drawable/button"
+        android:text="Pengguna"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
