--- a/Welder/app/src/main/res/layout/activity_intro.xml
+++ b/Welder/app/src/main/res/layout/activity_intro.xml
@@ -12,7 +12,7 @@
         android:layout_height="150sp"
         android:background="@drawable/button"
         android:gravity="center"
-        android:text="@string/butuh_juru_las"
+        android:text="JuruLas.com"
         android:textColor="@android:color/white"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -25,7 +25,7 @@
         android:id="@+id/btn_punya_akun"
         android:layout_width="120sp"
         android:layout_height="70sp"
-        android:layout_marginBottom="248dp"
+        android:layout_marginBottom="150dp"
         android:background="@drawable/button"
         android:text="@string/punya_akun"
         android:textColor="@android:color/white"
@@ -38,7 +38,7 @@
         android:id="@+id/btn_buat_akun"
         android:layout_width="120sp"
         android:layout_height="70sp"
-        android:layout_marginBottom="248dp"
+        android:layout_marginBottom="150dp"
         android:background="@drawable/button"
         android:text="@string/buat_akun"
         android:textColor="@android:color/white"
