--- a/Admin/app/src/main/res/layout/activity_login.xml
+++ b/Admin/app/src/main/res/layout/activity_login.xml
@@ -62,18 +62,19 @@
         android:id="@+id/buttonn"
         android:layout_width="300sp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/button"
         android:text="Log In"
         android:textColor="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/button27"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="445dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button27"
         android:layout_width="300sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="170dp"
+        android:layout_marginBottom="100dp"
         android:background="@drawable/button2"
         android:text="Kembali"
         app:layout_constraintBottom_toBottomOf="parent"
