--- a/Welder/app/src/main/res/layout/activity_verif.xml
+++ b/Welder/app/src/main/res/layout/activity_verif.xml
@@ -246,7 +246,8 @@
         android:textColor="@android:color/white"
         android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
-        tools:layout_editor_absoluteX="172dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
