--- a/Welder/app/src/main/res/layout/content_main.xml
+++ b/Welder/app/src/main/res/layout/content_main.xml
@@ -55,4 +55,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="150sp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button"
+        android:text="Riwayat"
+        android:textColor="@android:color/white"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
