--- a/Welder/app/src/main/res/layout/list_riwayat.xml
+++ b/Welder/app/src/main/res/layout/list_riwayat.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="16dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -14,33 +15,35 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView96"
+            android:id="@+id/textVieww4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
             android:paddingTop="15dp"
             android:textColor="@android:color/black"
-            android:textSize="20dp" />
+            android:textSize="20dip" />
 
         <TextView
-            android:id="@+id/textView97"
+            android:id="@+id/textVieww5"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:paddingLeft="5dp"
             android:paddingTop="10dp"
             android:textColor="@android:color/black"
-            android:textSize="11dp" />
+            android:textSize="11sp" />
+
     </LinearLayout>
 
     <Button
-        android:id="@+id/butondetail"
+        android:id="@+id/button23"
         android:layout_width="100sp"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/buttton"
+        android:layout_marginRight="12dp"
+        android:background="@drawable/button"
         android:text="Detail"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"/>
+
+
 </RelativeLayout>
