--- a/Pengguna/app/src/main/res/layout/activity_las_umum.xml
+++ b/Pengguna/app/src/main/res/layout/activity_las_umum.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:text="@string/las_umum"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView89"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
