--- a/Pengguna/app/src/main/res/layout/activity_jenis_proyek.xml
+++ b/Pengguna/app/src/main/res/layout/activity_jenis_proyek.xml
@@ -64,7 +64,7 @@
         android:layout_marginBottom="30dp"
         android:background="@drawable/buttton"
         android:onClick="manufaktur"
-        android:text="@string/industri_manufacture"
+        android:text="Industry Manufacture"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/lasumum"
         app:layout_constraintEnd_toEndOf="parent"
