--- a/Pengguna/app/src/main/res/layout/activity_list_sfc.xml
+++ b/Pengguna/app/src/main/res/layout/activity_list_sfc.xml
@@ -2,18 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parentt"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListSFCActivity"
-    android:id="@+id/parentt">
+    tools:context=".ListSFCActivity">
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
