--- a/Pengguna/app/src/main/res/layout/activity_pipa.xml
+++ b/Pengguna/app/src/main/res/layout/activity_pipa.xml
@@ -4,15 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/pippe"
     tools:context=".PipaActivity">
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:textColor="@android:color/black"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,7 +23,7 @@
         android:id="@+id/button10"
         android:layout_width="200sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/buttton"
         android:onClick="carbonwelder"
         android:text="@string/carbon_steel"
@@ -34,7 +36,7 @@
         android:id="@+id/button11"
         android:layout_width="200sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/buttton"
         android:onClick="stainlesswelder"
         android:text="@string/stainless_steel"
@@ -47,7 +49,7 @@
         android:id="@+id/button12"
         android:layout_width="200sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="200dp"
+        android:layout_marginBottom="80dp"
         android:background="@drawable/buttton"
         android:onClick="nonferrowelder"
         android:text="@string/non_ferro"
@@ -55,4 +57,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
