--- a/Pengguna/app/src/main/res/layout/activity_steel.xml
+++ b/Pengguna/app/src/main/res/layout/activity_steel.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/jembatan2"
     tools:context=".Steel">
 
     <TextView
@@ -11,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pabrik"
+        android:textColor="@android:color/white"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
@@ -25,6 +27,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginBottom="10dp"
         android:text="@string/jembatan"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -35,6 +38,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginBottom="10dp"
         android:text="@string/pabrik"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -45,6 +49,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginBottom="150dp"
         android:text="@string/gudang_bangunan"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/buttonWelder"
         app:layout_constraintStart_toStartOf="parent" />
 
