--- a/Pengguna/app/src/main/res/layout/activity_smaw.xml
+++ b/Pengguna/app/src/main/res/layout/activity_smaw.xml
@@ -120,7 +120,7 @@
         android:id="@+id/sfl3"
         android:layout_width="330dp"
         android:layout_height="80dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="100dp"
         android:background="@drawable/buttton2"
         app:layout_constraintBottom_toTopOf="@+id/editText11"
         app:layout_constraintEnd_toEndOf="parent"
@@ -169,7 +169,6 @@
         android:id="@+id/editText11"
         android:layout_width="150sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:backgroundTint="@android:color/white"
         android:clickable="true"
         android:ems="10"
@@ -178,7 +177,7 @@
         android:inputType="textPersonName"
         android:text="@string/tanggal_selesai"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
+        app:layout_constraintBottom_toTopOf="@+id/checkBox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.85"
         app:layout_constraintStart_toStartOf="parent" />
@@ -187,7 +186,6 @@
         android:id="@+id/editText10"
         android:layout_width="150sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:backgroundTint="@android:color/white"
         android:clickable="true"
         android:ems="10"
@@ -196,9 +194,9 @@
         android:inputType="textPersonName"
         android:text="@string/tanggal_mulai"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
+        app:layout_constraintBottom_toTopOf="@+id/checkBox"
         app:layout_constraintEnd_toStartOf="@+id/editText11"
-        app:layout_constraintHorizontal_bias="0.583"
+        app:layout_constraintHorizontal_bias="0.597"
         app:layout_constraintStart_toStartOf="parent" />
 
     <FrameLayout
@@ -262,7 +260,7 @@
         android:id="@+id/frameLayout14"
         android:layout_width="330dp"
         android:layout_height="80dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="100dp"
         android:background="@drawable/buttton2"
         app:layout_constraintBottom_toTopOf="@+id/editText11"
         app:layout_constraintEnd_toEndOf="parent"
@@ -373,7 +371,7 @@
         android:id="@+id/editText29"
         android:layout_width="330sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="100dp"
         android:backgroundTint="@android:color/white"
         android:ems="10"
         android:hint="Alamat"
@@ -382,6 +380,18 @@
         android:textColorHint="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="false"
+        android:text="Pakai Mesin SMAW"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.167"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
