--- a/Pengguna/app/src/main/res/layout/activity_oaw.xml
+++ b/Pengguna/app/src/main/res/layout/activity_oaw.xml
@@ -70,7 +70,7 @@
         android:id="@+id/editText20"
         android:layout_width="150sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="80dp"
         android:backgroundTint="@android:color/white"
         android:clickable="true"
         android:ems="10"
@@ -87,7 +87,7 @@
         android:id="@+id/editText21"
         android:layout_width="150sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="80dp"
         android:backgroundTint="@android:color/white"
         android:clickable="true"
         android:ems="10"
@@ -152,7 +152,7 @@
         android:id="@+id/editText32"
         android:layout_width="330sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="150dp"
         android:backgroundTint="@android:color/white"
         android:ems="10"
         android:hint="Alamat"
@@ -161,5 +161,16 @@
         android:textColorHint="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout21"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <CheckBox
+        android:id="@+id/checkBox2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pakai Mesin SMAW"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout21"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.159"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
